fixes alignment of arrows (#39)

--- a/src/styles/levelSelect.scss
+++ b/src/styles/levelSelect.scss
@@ -4,7 +4,7 @@ $level-select-hover: #adadad;
 $level-select-background: rgba($color: #fff, $alpha: 0.7);
 
 .dropdown-container {
-  align-items: center;
+  align-items: flex-end;
   align-self: stretch;
   border-radius: 2em;
   display: inline-flex;
